feat 改进 jpa 生成器